tests/semantic/fail/record-not-declared.tiger
let
      var x := data {a = 0}
in end
